2009-03-01  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Added some missing #includes.
	* src/storage-manager.c (back_up_file),
	(almanah_storage_manager_connect): Make an automatic backup of the
	database before opening it just to be safe. (Closes: #572926)

2009-01-29  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c (database_idle_cb), (encrypt_database):
	Only delete the plaintext database file if the encrypted database
	file's size is greater than 0B, to try and prevent data loss in
	odd situations.

============ Version 0.6.0

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac: Bump to version 0.6.0.

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/definitions/note.c (note_view): Ensure that the main window
	doesn't steal the focus when viewing a note from the definition
	manager.
	* src/definition-manager-window.c
	(almanah_definition_manager_window_init):
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c (add_definition_to_current_entry),
	(mw_search_activate_cb), (mw_preferences_activate_cb),
	(mw_view_definitions_activate_cb):
	* src/main.c (almanah_quit), (main):
	* src/main.h: Rearrange how dialogues and windows are opened such
	that they aren't resident in memory until first opened, which should
	speed up Almanah on startup, and reduce initial memory consumption.

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/event-factories/calendar-sources.c: Updated from gnome-panel
	trunk.
	* src/main.c:
	* src/main.h: Fixed copyright headers to update the year.

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/link-factories/:
	* src/links/: Remove directories which should've been removed when
	renaming links to events.

2009-01-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c:
	* src/main.h: Fix a compilation error when compiling with -fno-common.

2009-01-14  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.schemas.in: